# COS214Project

./: .gitignore  CMakeLists.txt  README.md
Data/: INTRO.md  RaceTracks.txt  doxygen_config.conf  raceweekends.json  test.json
Data/Doxygen/html/: AbstractJSONReader_8h_source.html  AerodynamicsFactory_8h_source.html  AirTransport_8h_source.html  BrokenComponent_8h_source.html  CalendarIterator_8h_source.html  Calendar_8h_source.html  CarStoreCommand_8h_source.html  ChassisFactory_8h_source.html  Command_8h_source.html  ConcreteCalendar_8h_source.html  ConservativeStart_8h_source.html  CorneringTechnique_8h_source.html  CurSeasonBuilder_8h_source.html  DoubleElement_8h_source.html  ElectronicsFactory_8h_source.html  ElementType_8h_source.html  EngineFactory_8h_source.html  EngineeringCommand_8h_source.html  EngineeringTeam_8h_source.html  EventResponse_8h_source.html  Factory_8h_source.html  GeneralRaceStrategy_8h_source.html  (+402 more)
Data/Output/: Disband.txt  PreSeasonEngineering.txt  PreSeasonTransport.txt
System/: JeanreMain.cpp  kyleMain.cpp  main.cpp
System/Calendar/: CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarIterator.cpp  CalendarIterator.h  ConcreteCalendar.cpp  ConcreteCalendar.h  Iterator.cpp  Iterator.h  RaceWeekend.cpp  RaceWeekend.h
System/Car/: AerodynamicsComponent.cpp  AerodynamicsComponent.h  CMakeLists.txt  Car.cpp  Car.h  Chassis.cpp  Chassis.h  Component.cpp  Component.h  ElectronicsComponent.cpp  ElectronicsComponent.h  Engine.cpp  Engine.h
System/Container/: CMakeLists.txt  GoodsContainer.cpp  GoodsContainer.h
System/Debugger/: Debugger.cpp  Debugger.h
System/Engineering/: AbstractEngineeringTeam.cpp  AbstractEngineeringTeam.h  CMakeLists.txt  EngineeringTeam.cpp  EngineeringTeam.h  Factory.cpp  Factory.h
System/JSONReader/: AbstractJSONReader.cpp  AbstractJSONReader.h  CMakeLists.txt  DoubleElement.cpp  DoubleElement.h  ElementType.h  IntegerElement.cpp  IntegerElement.h  JSONElement.cpp  JSONElement.h  JSONObjectHolder.cpp  JSONObjectHolder.h  JSONRoot.cpp  JSONRoot.h  StringElement.cpp  StringElement.h
System/Memento/: CMakeLists.txt
System/Memento/Car/: CarCareTaker.cpp  CarCareTaker.h  CarMemento.cpp  CarMemento.h  CarState.cpp  CarState.h  CarStore.cpp  CarStore.h
System/Memento/Component/: ChassisAndAeroState.cpp  ChassisAndAeroState.h  ComponentCareTaker.cpp  ComponentCareTaker.h  ComponentMemento.cpp  ComponentMemento.h  ComponentState.cpp  ComponentState.h  ComponentStore.cpp  ComponentStore.h  EngineState.cpp  EngineState.h
System/PitCrew/: PitCrew.cpp  PitCrew.h
System/Racing/: CMakeLists.txt  RaceTrack.cpp  RaceTrack.h  RealRaceTrack.cpp  RealRaceTrack.h  SimulationTrack.cpp  SimulationTrack.h
System/RacingStrategy/: CMakeLists.txt  StrategyTeam.cpp  StrategyTeam.h
System/RacingStrategy/PitCrew/: PitCrew.cpp  PitCrew.h
System/RacingStrategy/PitCrew/Instructions/: EventResponse.cpp  EventResponse.h  Instruction.cpp  Instruction.h  TacticalDecision.cpp  TacticalDecision.h
System/RacingStrategy/PitCrew/RaceEvents/: BrokenComponent.cpp  BrokenComponent.h  NoEvent.cpp  NoEvent.h  RaceEvent.cpp  RaceEvent.h  RedFlag.cpp  RedFlag.h  SafetyCar.cpp  SafetyCar.h  WornTyres.cpp  WornTyres.h  YellowFlag.cpp  YellowFlag.h
System/RacingStrategy/Strategies/: ConservativeStart.cpp  ConservativeStart.h  CorneringTechnique.cpp  CorneringTechnique.h  GeneralRaceStrategy.cpp  GeneralRaceStrategy.h  InertiaDrift.cpp  InertiaDrift.h  MinimalPitstops.cpp  MinimalPitstops.h  TaxiStyle.cpp  TaxiStyle.h
System/Simulation/: CMakeLists.txt  Simulation.cpp  Simulation.h  Simulator.cpp  Simulator.h  SimulatorCareTaker.cpp  SimulatorCareTaker.h  StartLineState.cpp  StartLineState.h
System/TeamManager/: CMakeLists.txt  Manager.cpp  Manager.h  TeamManager.cpp  TeamManager.h  TeamManagerObjects.cpp  TeamManagerObjects.h
System/Testing/: CMakeLists.txt  PreTestingState.cpp  PreTestingState.h  Software.cpp  Software.h  SoftwareTest.cpp  SoftwareTest.h  Tester.cpp  Tester.h  TesterCareTaker.cpp  TesterCareTaker.h  Testing.cpp  Testing.h  WindTunnel.cpp  WindTunnel.h  WindTunnelTest.cpp  WindTunnelTest.h
System/TransportMethod/: AirTransport.cpp  AirTransport.h  CMakeLists.txt  RoadTransport.cpp  RoadTransport.h  SeaTransport.cpp  SeaTransport.h  TransportMethod.cpp  TransportMethod.h
(+307 files in other folders)
